# VDBMS

./: .gitignore  .gitmodules  LICENSE  README.md  VDBMS.cabal  VDBMS.oldcabal  emptestvdb.out  enron.out  enron.out.old  package.yaml  stack.yaml  vdbms.cabal
Example/: Query.hs  QueryConstructor.hs  SmartConstructor.hs  TwoOption.hs  TwoPathTest.hs
Example/EmployeeUseCase/: EmployeeQs.hs  EmployeeQuery.hs  EmployeeSchema.hs  EmployeeVQuery.hs  EmployeeVSchema.hs  oldEmployeeVQuery.hs  smallSampleForTest.hs
Example/EnronUseCase/: EnronQs.hs  EnronQuery.hs  EnronSchema.hs
Proofs/: #equiv_lemms.v#  .lia.cache  AttOPVatt.v  Config_Dist_Over_Union_Inter.v  Coq_extended_logic.v  ElemOPVelem.v  Equiv_Lemmas.v  Feature.v  ImpVRA_varPrsrvtn_thm.v  Maps.v  README.md  SetOPLemmas.v  Set_Op_Lemmas.v  Todos.txt  VRA_ImptoExp.v  VRA_RA_encoding.v  VRA_RA_encoding_alternative_def.v  VRA_encoding_lemmas.v  VRA_sorted_list.v  VRA_varPrsrvtn_thm.v  configdistUnionInter.v  equiv_lemms.v  equiv_velems_list.v  extract_lemmas.v  get_annot_lemmas.v  subset_subsump_lemmas.v  subsump_lemmas.v
Proofs/Coq Source/: Elem_Op_Velem.v  Equiv_Velems_List.v  Get_Annot_Lemmas.v  Subset_Subsump_Lemmas.v  VDBMS_Encoding.v  VRA_Imp_To_Exp.v
app/: Main.hs
bench/Employee/: Main.hs
bench/EnronEmail/: Main.hs
databases/employeeDB/: emp_vdb.db  emp_vdb.sql  employee_evolution_db.sql  employee_script.txt  employee_vdb.sql  populate_employe_evolution.sql  postgresCreateTables.sql  readme.txt  step1_chop_employees.sql  step2_build_vdb.sql
databases/employeeDB/confed/: emp_confed1.db  emp_confed2.db  emp_confed3.db  emp_confed4.db  emp_confed5.db
databases/employeeDB/enronDbSQLqueries/: aliasTable.sql  createSignature.sql  distinctVMessage.sql  encrptionStuff.sql  isFromRemailerOperations.sql  isSign_EncryptStuff.sql
databases/employeeDB/relDBs/: emp_db1.db
databases/enronEmailDB/: build_enron_email_vdb.sql  postgresCreateTables.sql  step1_build_enron_variant.sql  step1_build_enron_variants.sql  step2_build_enron_vdb.sql  step2_build_enron_vdb_backup.sql
databases/enronEmailDB/EmailProductLine/: allFeatures.exp
databases/enronEmailDB/enronDbSQLqueries/: SQL_SAFE_UPDATES.sql  addColumn.sql  addColumnIsFromRemail.sql  addPresCondColumn.sql  createForwardMsg.sql  createMessageWIthEncrpytAndSIgn.sql  mailhostStuff.sql  remailstuff.sql  updateValueBasedOnOtherTable.sql  v_employeeWIthoutNewColumn.sql
databases/enronEmailDB/enron_db_SQLqueries/: autoResponse.sql  insertValueFromOtherTable.sql  isSign_EncryptStuff.sql  setPresCondValue.sql
databases/enronEmailDB/new/: enronPostgresCreateTables.sql
databases/enronEmailDB/scripts/: enron.txt  insertTuple2postgres.py
databases/testDB/: test1.db
lib/: addExtraLib.txt
results/: employee-NBF(i)-comp-filter.csv  enronEmail-NBF(f).csv  enronEmail-NBF(i)-comp-filter.csv  enronEmail-NBF-comp-filter.csv  enronEmail1-5.csv
results/numbers/: emp-nbf-ubf.csv  emp-nbff-ubff.csv  emp-nbfi-ubfi.csv  emp-nbfif-ubfif.csv  employee copy.xlsx  employee-NBF(f).csv  employee-NBF(i)-comp-filter.csv  employee-NBF-comp-filter.csv  employee-UBF(f).csv  employee.xlsx  employee1-5.csv  enron-nbf-ubf.csv  enron-nbfi-ubfi.csv  enronEmail copy.xlsx  enronEmail-NBF(f).csv  enronEmail-NBF(i)-comp-filter.csv  enronEmail-NBF-comp-filter.csv  enronEmail.xlsx  enronEmail1-5.csv
results/plots/: enronEmail-NBF(i)-comp-filter.csv  enronEmail-NBF-comp-filter.csv  enronEmail1-5.csv  plots.R
src/Examples/: QueryConstructor.hs  SmartConstructor.hs
src/Examples/EmployeeUseCase/: EmployeeQs.hs  EmployeeQuery.hs  EmployeeSchema.hs  EmployeeVSchema.hs
src/PARSER/: AST_Vquery.hs  vquerySyntax.hs
src/VDB/: Algebra.hs  AlgebraToSql.hs  BuildVres.hs  Condition.hs  Config.hs  Database.hs  Feature.hs  FeatureExpr.hs  FeatureExpr_original.hs  Name.hs  ParserDoctest.hs  ParserTest.hs  ParsingSQL.hs  SAT.hs  SQL.hs  Schema.hs  ShowVresult.hs  SqlTable.hs  SqlToAlgebra.hs  Table.hs  Target.hs  TwoPathTest.hs  Type.hs  TypeSystem.hs  VSqlToAlgebra.hs  VTable.hs  Value.hs  Variant.hs  Variational.hs  VqueryConfigSem.hs  VqueryTrans.hs  Vresult.hs
src/VDB/Approach1/: App1Alg2Sql.hs  App1Run.hs
src/VDB/BruteForce/: BruteForce.hs  BruteForceAlg2Sql.hs  BruteForceAppConfig.hs  BruteForceAppSat.hs  BruteForceAppSatPersist.hs  BruteForceSendQs.hs  (+1 more)
src/VDBMS/: TypeSystem.hs
test/: Setup.hs  Spec.hs  Tests.hs  testEmployee.hs  testEmployeeQuery.hs  testEmployeeSchema.hs  testParser.hs  testTranslater.hs  testTranslater_Phase1.hs  testTranslater_Phase2.hs  testTwoOptionExample.hs
test/Schema/: Test.hs
unusedCode/: ApplyConf.hs  BFAppSatPersist.hs  DatabaseVariational.hs  Naive.hs  Table.hs  TestHaskellDB.hs  TypeSystem.hs  VqToOptVq.hs  VsqlToAlgebra.hs
usecases/test/: create.sql  insert.sql
(+275 files in other folders)
