name:          VDBMS
version:       0.0.0
synopsis:      A variational database management system
homepage:      http://github.com/lambda-land/VDBMS
license:       BSD3
author:        OSU DB-PL
maintainer:    walkiner@oregonstate.edu
category:      Language
build-type:    Simple
cabal-version: >= 1.22

source-repository head
  type:     git
  location: https://github.com/lambda-land/VDBMS
  branch:   master

-- NOTE: sbv also requires z3 executable on PATH!
library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -Wredundant-constraints -Wno-missing-signatures
  default-extensions:
      DeriveDataTypeable
    , DeriveGeneric
    , FlexibleContexts
    , GeneralizedNewtypeDeriving
    , MultiParamTypeClasses
    , OverloadedStrings
  build-depends:
      base
    , containers
    , optparse-applicative
    , sbv
  exposed-modules:

executable vdb
  hs-source-dirs:   app
  default-language: Haskell2010
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fhpc
  build-depends:
      VDBMS
    , base

test-suite test
  hs-source-dirs:   test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
      OverloadedStrings
  build-depends:
      VDBMS
    , base
    , containers
    , tasty
    , tasty-hunit
  other-modules:
