name:          VDBMS
version:       0.0.0
synopsis:      A variational database management system
homepage:      http://github.com/lambda-land/VDBMS
license:       BSD3
author:        OSU DB-PL
maintainer:    walkiner@oregonstate.edu
category:      Language
build-type:    Simple
cabal-version: >= 1.22

source-repository head
  type:     git
  location: https://github.com/lambda-land/VDBMS
  branch:   master

-- NOTE: sbv also requires z3 executable on PATH!
library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wno-missing-signatures
    -Wno-name-shadowing
    -Wredundant-constraints
  default-extensions:
      DeriveDataTypeable
    , DeriveGeneric
    , FlexibleContexts
    , FlexibleInstances
    , GeneralizedNewtypeDeriving
    , MultiParamTypeClasses
    , OverloadedStrings
  build-depends:
      base
    , containers
    , sbv
    , text
    , megaparsec
    , parsec
    , HDBC
    , mtl
  exposed-modules:
      VDB.Algebra
    , VDB.Config
    , VDB.Condition
    , VDB.FeatureExpr
    , VDB.Name
    , VDB.SAT
    , VDB.Schema
    , VDB.Table
    , VDB.Variational
    , VDB.Value
    , VDB.ParsingSQL
    , VDB.SQL
    , VDB.VSqlToAlgebra
    , VDB.Target
    , VDB.AlgebraToSql
    , VDB.Example.TwoOption
    , VDB.TypeSystem.Semantics
    , VDB.TypeSystem.TypeChecking

test-suite test
  hs-source-dirs:   test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
      OverloadedStrings
  build-depends:
      VDBMS
    , base
    , containers
    , tasty
    , tasty-hunit
    , aeson
    , text
    , megaparsec
    , parsec
  other-modules:
      TestTranslater_Phase1
    , TestTranslater_Phase2
